--- a/style.css
+++ b/style.css
@@ -2,21 +2,39 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "cOdiNG";
+    font-family: "Inter";
     line-height: 2;
 }
 
 a:link {
-  color: rgb(154, 181, 169);
+  color: rgb(0, 0, 0) !important;
+  text-shadow: none;
+  transition: color 1s, text-shadow 1s;
 }
 
 a:link:hover {
-  color: rgb(126, 147, 138);
+  color: rgb(255, 255, 255);
+  text-shadow: #000000 1px 0 10px;
+  transition-duration: 1s;
 }
 
 
 h1 {
     font-size: 30px;
+    font-family: "Inter";
+}
+
+.inter {
+  font-family: "Inter";
+  font-weight: 100;
+  font-size: 30px;
+}
+
+.text-EOD {
+  text-align: left;
+  font-family: "Inter";
+  font-weight: 5;
+  font-size: 30px;
 }
 
 @font-face {
@@ -24,13 +42,18 @@ h1 {
     src: url("assets/cOdiNGVF.ttf");
 }
 
+@font-face {
+  font-family: "Inter";
+  src: url("assets/Inter-VariableFont_opsz,wght.ttf");
+}
+
 .marquee {
   overflow: hidden; /* Hides anything that goes beyond the box */
   position: relative; /* Ensures the marquee content is positioned relative to this container */
   width: 100%; /* Full width of the container */
   height: 30px; /* Set the height of the marquee */
-  background-color: rgb(255, 255, 255); /* Background color of the marquee */
-  color: rgb(154, 181, 169); /* Text color */
+  background-color: rgb(0, 0, 0); /* Background color of the marquee */
+  color: rgb(255, 255, 255); /* Text color */
 }
 
 .marquee-content {
@@ -48,6 +71,41 @@ h1 {
     transform: translateX(-100%); /* End at the far left */
   }
 }
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 15px;
+  }
+  p {
+    font-size: 8px;
+  }
+  .grid {
+      grid-template-columns: 1fr !important;
+      gap: 10px;
+      padding: 10px;
+  }
+  .grid-EOD {
+    grid-template-columns: 1fr !important;
+    gap: 10px;
+    padding: 10px;
+  }
+  .bar-gallery {
+    width: 12vw;
+    display: grid;
+    grid-template-rows: auto;
+    gap: 3px;
+    padding: 5px;
+    border: 1px white dotted;
+  }
+
+  .bar-gallery div {
+    width: auto;
+    height: 10px;
+    font-size: 8px;
+    padding: 3px;
+    border: 1px dotted white;
+    text-align: center;
+  }
+}
 
 .grid {
     display: grid;
@@ -58,7 +116,6 @@ h1 {
 .grid div {
     height: auto;
     padding: 10px;
-    border: 1px solid rgb(154, 181, 169);
     text-align: center;
 }
 
@@ -69,15 +126,15 @@ h1 {
 .flex-parent {
     display: flex;
     flex-direction: row;
-    height: 100vh;
-    border: 1px solid rgb(134, 160, 148);
+    height: auto;
 }
 .flex-child {
     padding: 0;
     flex-grow: 1;
     text-align: center;
     height: 20px;
-    border: 1px solid rgb(154, 181, 169);
+    font-family: "Inter";
+    font-weight: 200;
 }
 
 .sidenav {
@@ -87,7 +144,7 @@ h1 {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgb(154, 181, 169);
+  background-color: rgb(255, 255, 255);
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -114,10 +171,10 @@ h1 {
   margin-left: 50px;
 }
 
-@media screen and (max-height: 450px) {
+/*@media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
-}
+}*/
 
 .scroll-container {
     display: flex;
@@ -148,3 +205,54 @@ video {
   max-width: 100vw;
   max-height: 100vh;
 }
+
+.gallery-backdrop {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+  padding: 10px;
+}
+
+.backdrop {
+  visibility: hidden;
+}
+
+.gallery-backdrop:hover .backdrop {
+  visibility: visible;
+  transition-duration: 1s;
+}
+
+.grid-gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+  padding: 30px;
+}
+.grid div {
+  height: auto;
+  padding: 10px;
+  text-align: center;
+}
+
+.bar-gallery {
+  width: 15vw;
+  display: grid;
+  grid-template-rows: auto;
+  gap: 5px;
+  padding: 10px;
+  border: 1px white dotted;
+}
+
+.bar-gallery div {
+  width: auto;
+  height: 40px;
+  padding: 5px;
+  border: 1px dotted white;
+  text-align: center;
+}
+.bar-gallery a:link:hover {
+  color: #ffffff;
+  text-shadow: #ffffff 1px 0 10px;
+  transition-duration: 1s;
+}
+
